--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,9 +71,6 @@ services:
 
       EMQX_LOADED_PLUGINS: "emqx_recon,emqx_retainer,emqx_management,emqx_dashboard,emqx_auth_mongo"
 
-
-
-
   mongo:
     container_name: sensores_maxine-mongo
     image: mongo:4.4
@@ -95,3 +92,13 @@ services:
       - 8555:80
     volumes:
       - ../data/website:/usr/share/nginx/html    
+
+  backend:
+    container_name: sensores_maxine-backend
+    image: gerardojunior/nuxtjs
+    restart: always
+    ports:
+      - 3001:3001
+    volumes:
+      - ../data/backend:/src
+    command: dev
